--- a/backup/app/templates/base.html
+++ b/backup/app/templates/base.html
@@ -5,27 +5,43 @@
     <title>{% block title %}My Personal Blog{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/easymde@2.18.0/dist/easymde.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/easymde@2.18.0/dist/easymde.min.js"></script>
+
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+        tex2jax: {
+            inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+            processEscapes: true
+        }
+        });
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.2/es5/tex-mml-chtml.min.js" async></script>
+    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="{{ url_for('main.index') }}">My Blog</a>
+            <a class="navbar-brand" href="{{ url_for('main.index') }}">学习博客</a>
             <ul class="navbar-nav me-auto">
-                <li class="nav-item"><a class="nav-link" href="{{ url_for('main.index') }}">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('main.index') }}">首页Home</a></li>
                 {% if current_user.is_authenticated %}
-                <li class="nav-item"><a class="nav-link" href="{{ url_for('main.create_post') }}">New Post</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{ url_for('main.categories') }}">Categories</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{ url_for('main.dashboard') }}">Dashboard</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{ url_for('main.profile') }}">Profile</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{ url_for('main.logout') }}">Logout</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('main.create_post') }}">新的发表New Post</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('main.categories') }}">文章类型Categories</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('main.dashboard') }}">总览Dashboard</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('main.profile') }}">个人信息Profile</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('main.logout') }}">退出Logout</a></li>
                 {% else %}
-                <li class="nav-item"><a class="nav-link" href="{{ url_for('main.login') }}">Login</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{ url_for('main.register') }}">Register</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('main.login') }}">登入Login</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('main.register') }}">注册Register</a></li>
                 {% endif %}
             </ul>
             <form class="d-flex" action="{{ url_for('main.search') }}">
                 <input class="form-control me-2" type="search" name="query" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <button class="btn btn-outline-success" type="submit">查找Search</button>
             </form>
         </div>
     </nav>
