--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <head>
     <meta charset="utf-8">
     <title>{% block title %}My Personal Blog{% endblock %}</title>
