--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="jumbotron text-center bg-primary text-white">
-    <h1>欢迎来到我的学习博客Welcome to My Study Blog</h1>
-    <p>Explore the latest insights and stories</p>
+    <img src="{{ url_for('static', filename='images/miyamotto.png') }}" alt="Miyamoto Musashi Portrait" class="img-fluid rounded mb-3" style="max-height: 300px;">
+    <h1>欢迎来到我的学习博客 - Welcome to My Study Blog</h1>
+    <p>Explore the latest insights and stories, inspired by the wisdom of Miyamoto Musashi</p>
 </div>
 <h2>Latest Posts</h2>
 <div class="row">
