--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 <div class="jumbotron text-center bg-primary text-white" style="opacity: 1; background-color: #0d6efd !important;">
     <img src="{{ url_for('static', filename='images/miyamotto.png') }}" alt="Miyamoto Musashi Portrait" class="img-fluid rounded mb-3" style="max-height: 300px;">
     <h1 style="color: #fff !important; opacity: 1;">欢迎来到我的学习博客 - Welcome to My Study Blog</h1>
-    <p style="color: #fff !important; opacity: 1;">Explore the latest insights and stories, inspired by the wisdom of Miyamoto Musashi</p>
+    <p style="color: #fff !important; opacity: 1;">Explore the latest insights and stories, inspired by "武蔵之光."</p>
 </div>
 <h2>Latest Posts</h2>
 <div class="row">
