--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -177,3 +177,30 @@ a:hover {
     font-family: monospace;
 }
 
+
+
+/*.post-content hr {
+/*    border: none;                  /* remove default border */
+/*    height: auto;
+/*    line-height: 1;                /* align text */
+/*    text-align: center;
+/*    margin: 1em 0;
+/*}
+/*
+/*.post-content hr::after {
+/*    content: "__________________________________________";
+/*    color: #555;                   /* make it subtle */
+/*    font-family: monospace;        /* keep uniform underscores */
+/*    font-size: 14px;
+/*}
+ *
+*/
+
+.post-content hr {
+    all: unset;
+    display: block;
+    /*border: none;*/                      /* remove default border */
+    border-top: 2px solid #bbb !important;     /* real line, thickness=3px, color=dark gray */
+    margin: 2.0em 0;                   /* spacing */
+}
+
